<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/option" />

        <Button
            android:id="@+id/select1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select1" />

        <Button
            android:id="@+id/select2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select2" />

        <Button
            android:id="@+id/select3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select3" />
        
        <Button
            android:id="@+id/select4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select4" />
    </LinearLayout>

</ScrollView>